# readable-name-generator

./: .chglog.yml  .dockerignore  .fastconventional.yaml  .gitignore  .mergify.yml  .versio.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bins  Dockerfile.container  Earthfile  Justfile  LICENSE  Makefile  README.md  cog.toml  docker-bake.hcl  go.mod  go.sum  io.github.PurpleBooth.readable-name-generator.yml  main.go  main_test.go  nfpm.yaml  renovate.json
.forgejo/workflows/: ci.yml  pipeline.yml  release.yml
.github/: dependabot.yml  stale.yml
.github/workflows/: automerge.yml  development-release.yml  full-release.yml  pipeline.yml  pre-release.yml  publish-release.yml  release.yml  test-and-tag.yml  test.yml  update-tap.yml
ci/: go-mutation-testing.sh
homebrew/: formula.rb.envsubstr  formula.rb.j2
src/: cli.rs  completion.rs  main.rs
