[package]
name = "readable-name-generator"
description = "Generate a readable name for throwaway infrastructure"
version = "4.1.69"
edition = "2021"
license = "CC0-1.0"
repository = "https://codeberg.org/PurpleBooth/readable-name-generator.git"
keywords = ["names", "utility"]
categories = ["development-tools::testing","command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0" }
anarchist-readable-name-generator-lib = "0.1.3"
clap_complete = "4.5.42"
clap = { version = "4.5.26", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
miette = { version = "7.4.0", features = ["fancy"] }
