[package]
name = "readable-name-generator"
description = "Generate a readable name for throwaway infrastructure"
version = "4.3.20"
edition = "2021"
license = "CC0-1.0"
repository = "https://codeberg.org/PurpleBooth/readable-name-generator.git"
keywords = ["names", "utility"]
categories = ["development-tools::testing","command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "readable-name-generator"
path = "src/main.rs"

[dependencies]
rand = { version = "0.9.2" }
anarchist-readable-name-generator-lib = "0.2.0"
clap_complete = "4.5.57"
clap = { version = "4.5.47", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
miette = { version = "7.6.0", features = ["fancy"] }
