[package]
name = "readable-name-generator"
description = "Generate a readable name for throwaway infrastructure"
version = "4.3.21"
edition = "2024"
license = "CC0-1.0"
repository = "https://codeberg.org/PurpleBooth/readable-name-generator.git"
keywords = ["names", "utility"]
categories = ["development-tools::testing","command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "readable-name-generator"
path = "src/main.rs"

[dependencies]
rand = { version = "0.9" }
anarchist-readable-name-generator-lib = "0.2"
clap_complete = "4"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
